tests/single_instruction_translation_validation/mcsema/memory-variants/cmpxchgw_m16_r16/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:186:30: error: use of undefined value '@__remill_compare_exchange_memory_16'
  %12 = call %struct.Memory* @__remill_compare_exchange_memory_16(%struct.Memory* %0, i64 %2, i16* nonnull dereferenceable(2) %6, i16 zeroext %7) #24
                             ^
0.01user 0.01system 0:00.03elapsed 109%CPU (0avgtext+0avgdata 27440maxresident)k
0inputs+16outputs (0major+3236minor)pagefaults 0swaps
